feat: complete S3 state consistency and S4 business synchronization
Preserve content authority, versioned review decisions and reliable event delivery; align profile/calendar/home, search, image uploads and notification history.

Validation before commit: 220 reactor tests; 92 S4 and 71 S3 real integration assertions; demo frontend auth 14/14, S3 contracts 15/15 and build passed. Commit-only cleanup removes trailing blank lines in three review files; runtime evidence and credentials remain local. No production cutover.